Handle all context lost reasons when determining guilt of domain.

This avoids a NOTREACHED() in the previous code. Verified that addition
of new constants without updating the switch statement will cause a
compile failure.

BUG=615113
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2029293002
Cr-Commit-Position: refs/heads/master@{#397906}

Former-commit-id: c27c10b334e930d5569aafdf8c7d167f034708c5